--- a/public/Assets/css/lp.css
+++ b/public/Assets/css/lp.css
@@ -29,8 +29,9 @@
 
 .jumbotron .custom-search-button {
   position: relative;
-  margin-left: 30px;
-  margin-top: 10px;
+  margin-left: 35px;
+  margin-top: 15px;
+  margin-bottom: 45px;
   padding: 10px;
   background-color: #f6546f;
   border: none;
@@ -110,8 +111,9 @@
   .jumbotron {
     margin-top: -101px;
     background-color: #28285c;
-    padding: 230px 0 230px;
+    padding: 270px 0 190px 0;
   }
+
   .jumbotron h1 {
     text-align: left;
   }
